# actify

./: .gitignore  Cargo.toml  LICENSE  README.md  ci.Dockerfile  rustfmt.toml
.github/workflows/: ci.yml
actify/: Cargo.toml
actify-macros/: Cargo.toml  rustfmt.toml
actify-macros/src/: lib.rs  parse.rs
actify-macros/src/codegen/: actor.rs  handle.rs  mod.rs
actify-test/: Cargo.toml
actify-test/src/: main.rs
actify-test/tests/: unsupported_arg_types.rs
actify-test/tests/compile_fail/: impl_trait_arg.rs  impl_trait_arg.stderr  invalid_custom_name.rs  invalid_custom_name.stderr  raw_pointer_arg.rs  raw_pointer_arg.stderr  reference_arg.rs  reference_arg.stderr  static_method.rs  static_method.stderr  superfluous_broadcast.rs  superfluous_broadcast.stderr  superfluous_skip_broadcast.rs  superfluous_skip_broadcast.stderr  unnecessary_block_broadcast.rs  unnecessary_block_broadcast.stderr  unsupported_arg_type.rs  unsupported_arg_type.stderr
actify/src/: actor.rs  actors.rs  cache.rs  lib.rs  throttle.rs
actify/src/extensions/: map.rs  mod.rs  option.rs  set.rs  string.rs  vec.rs  vecdeque.rs
actify/src/handle/: handle.rs  read_handle.rs
actify/src/handles/: handle.rs  mod.rs
src/: actors.rs  cache.rs  lib.rs  throttle.rs
src/actors/: any.rs  base.rs  cache.rs  map.rs  option.rs  vec.rs
src/extensions/: mod.rs  option.rs  vec.rs
