[package]
name = "actify-test"
version = "0.1.0"
edition = "2024"
description = "An intutive actor model with minimal boilerplate"
license = "MIT"
repository = "https://github.com/AvalorAI/actify"
categories = ["testing"]

[dependencies]
actify = { version = "0.6.1", path = "../actify", features = ["profiler"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.15", features = ["full"] }

[features]
default = []
