[package]
name = "actify-test"
version = "0.1.0"
edition = "2024"
description = "Actify testing crate"
repository = "https://github.com/AvalorAI/actify"
categories = ["testing"]

[dependencies]
actify = { path = "../actify", features = ["profiler"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.15", features = ["full"] }

[dev-dependencies]
trybuild = "1"

[features]
default = []
