[package]
name = "actify"
version = "0.4.1"
edition = "2021"
description = "An intutive actor model with minimal boilerplate"
license = "MIT"
repository = "https://github.com/AvalorAI/actify"
documentation = "https://docs.rs/actify/latest/actify/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }
log = "0.4"
futures = "0.3.26"
actify-macros = "0.3.1"
# actify-macros = { path = "../actify-macros", version = "0.3.1" }
lazy_static = "1.4.0"

[features]
default = []
profiler = []