[package]
name = "actify"
version = "0.7.1"
edition = "2024"
description = "An intutive actor model with minimal boilerplate"
license = "MIT"
repository = "https://github.com/AvalorAI/actify"
documentation = "https://docs.rs/actify/latest/actify/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4"
futures = "0.3.26"
actify-macros = "0.3.5"
lazy_static = "1.4.0"

[features]
default = []
profiler = []
