[package]
name = "actify"
version = "0.8.0"
edition = "2024"
description = "An intuitive actor model with minimal boilerplate"
license = "MIT"
repository = "https://github.com/AvalorAI/actify"
documentation = "https://docs.rs/actify/latest/actify/"
readme = "../README.md"

[dependencies]
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4"
futures = "0.3.26"
actify-macros = "0.4.0"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["test-util"] }

[features]
default = []
profiler = []
